# Colony

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  app.py  colony.json  go.mod  go.sum  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Colony/: README.md  requirements.txt
Colony/src/: Colony.py
ColonyLauncher/: CMakeLists.txt  ColonyLauncher.md
ColonyLauncher/Nexus/: CMakeLists.txt  Nexus.md
ColonyLauncher/Nexus/assets/: README.md
ColonyLauncher/Nexus/src/nexus/: arcade_main.cpp  arcade_main.hpp  nexus_main.cpp  nexus_main.hpp
ColonyLauncher/OrbitalArcade/: CMakeLists.txt  README.md
ColonyLauncher/OrbitalArcade/assets/: README.md
ColonyLauncher/OrbitalArcade/src/orbital_arcade/: arcade_main.cpp  arcade_main.hpp
ColonyLauncher/assets/content/: app_content.json  app_content_minimal.json
ColonyLauncher/assets/content/i18n/: ar.json  de.json  en.json
ColonyLauncher/docs/: docs.md  task-folder-sourced-channels.md
ColonyLauncher/src/: main.cpp
ColonyLauncher/src/app/: application.cpp  application.h  application.hpp  application_dialogs.cpp  application_events.cpp  application_init.cpp  application_render.cpp
ColonyLauncher/src/core/: content.hpp  content_loader.cpp  filesystem_discovery.cpp  filesystem_discovery.hpp
ColonyLauncher/src/frontend/components/: badge.cpp  buttons.cpp  buttons.hpp  search_field.cpp  sidebar_item.cpp  sidebar_item.hpp  theme_swatch.cpp  theme_swatch.hpp
ColonyLauncher/src/frontend/models/: library_view_model.cpp  library_view_model.hpp
ColonyLauncher/src/frontend/utils/: font_loader.cpp  icon_loader.cpp
ColonyLauncher/src/frontend/views/: settings_view.cpp  settings_view.hpp
ColonyLauncher/src/input/: input_handlers.cpp  input_handlers.hpp  input_router.cpp  input_router.h
ColonyLauncher/src/platform/: renderer_host.cpp  renderer_host.hpp
ColonyLauncher/src/services/: settings_service.cpp  settings_service.hpp  theme_service.cpp  theme_service.hpp
ColonyLauncher/src/ui/: hub_panel.hpp  layout.cpp  library_panel.cpp  library_panel.hpp  navigation.cpp  navigation.hpp  program_visuals.cpp  settings_panel.cpp  theme.hpp
ColonyLauncher/src/ui/dialogs/: add_app_dialog.cpp  add_app_dialog.hpp  custom_theme_dialog.cpp  custom_theme_dialog.hpp  dialog_base.cpp  dialog_base.hpp  edit_user_app_dialog.cpp  edit_user_app_dialog.hpp
ColonyLauncher/src/ui/panels/: hero_panel.cpp  hero_panel.hpp  hub_panel.cpp  hub_panel.hpp  library_panel.cpp  library_panel.hpp  navigation.cpp  navigation.hpp
ColonyLauncher/src/utils/: asset_paths.cpp  asset_paths.hpp  color.cpp  color.hpp  drawing.cpp  drawing.hpp  font_manager.cpp  font_manager.hpp  text.hpp  text_wrapping.hpp
ColonyLauncher/tests/: content_loader_tests.cpp  filesystem_discovery_tests.cpp  manual_launch_notes.md
assets/catalogs/: program_modules.json
assets/content/: app_content.json  app_content_minimal.json
assets/content/i18n/: ar.json  de.json  en.json  fr.json  hi.json  zh.json
cmd/colony/: main.go
docs/archive/: api.md  sync.md  ux.md
include/colony/appcenter/: AppCenter.hpp
include/colony/core/: Manifest.hpp  Module.hpp  ModuleRegistry.hpp
include/colony/installer/: ModuleInstaller.hpp
include/colony/marketplace/: MarketplaceClient.hpp
include/colony/modules/: AudioPlayerModule.hpp  ResourceManagerModule.hpp  TextEditorModule.hpp
include/colony/security/: Permissions.hpp  SecurityManager.hpp
internal/config/: config.go
internal/i18n/: locales.go
internal/services/fs/: explorer.go
internal/services/lint/: lint.go
internal/services/lsp/: manager.go
internal/services/syntax/: editor.go
internal/ui/: app.go
manifests/: audio_player.json  resource_manager.json  text_editor.json
src/: CategoryAppsView.cpp  CategoryAppsView.h  LauncherModels.h  LauncherWindow.cpp  LauncherWindow.h  ModulePlaceholder.cpp  ModulePlaceholder.h  app.rs  config.rs  content_loader.cpp  content_loader.hpp  fs.rs  localization.rs  lsp.rs  main.cpp  main.rs  theme.rs
src/app/: application.cpp  application.hpp
src/appcenter/: AppCenter.cpp
src/controllers/: navigation_controller.cpp  navigation_controller.hpp
src/core/: Manifest.cpp  ModuleRegistry.cpp  content.hpp  content_loader.cpp  content_loader.hpp  localization_manager.cpp  localization_manager.hpp  program_catalog.cpp  program_catalog.hpp
src/frontend/components/: badge.hpp  brand_card.cpp  brand_card.hpp  empty_state_card.cpp  empty_state_card.hpp  search_field.hpp  sidebar_item.cpp  theme_swatch.cpp
src/frontend/utils/: debounce.hpp  font_loader.cpp  font_loader.hpp  icon_loader.cpp  icon_loader.hpp
src/frontend/views/: dashboard_page.cpp  dashboard_page.hpp  settings_view.cpp  settings_view.hpp
src/installer/: ModuleInstaller.cpp
src/marketplace/: MarketplaceClient.cpp
src/modules/: AudioPlayerModule.cpp  ResourceManagerModule.cpp  TextEditorModule.cpp
src/programs/: README.md  launch_contract.hpp
src/programs/archive/: ArchiveApp.cpp  ArchiveApp.hpp  ArchiveEvent.hpp  ArchiveStateMachine.cpp  ArchiveStateMachine.hpp  README.md
src/programs/archive/crypto/: aes_gcm.cpp  aes_gcm.hpp  argon2id.cpp  argon2id.hpp  hkdf.cpp  hkdf.hpp
src/programs/archive/vault/: Entry.cpp  Entry.hpp  Repository.cpp  (+1 more)
src/security/: SecurityManager.cpp
src/ui/: editor_view.rs  file_explorer.rs  hero_panel.cpp  hero_panel.hpp  hub_panel.cpp  hub_panel.hpp  layout.hpp  library_panel.cpp  library_panel.hpp  menubar.rs  mod.rs  navigation.cpp  navigation.hpp  program_visuals.hpp  settings_panel.cpp  settings_panel.hpp  status_bar.rs  theme.cpp  theme.hpp  window.rs
src/utils/: color.cpp  color.hpp  drawing.cpp  drawing.hpp  font_manager.cpp  font_manager.hpp  preferences.cpp  preferences.hpp  sdl_wrappers.hpp  text_wrapping.cpp
src/views/: chart_view.cpp  chart_view.hpp  media_view.cpp  media_view.hpp  simple_text_view.cpp  simple_text_view.hpp  view.hpp  view_factory.cpp  view_factory.hpp  view_registry.cpp  view_registry.hpp
tests/: content_loader_tests.cpp
tests/archive/: test_crypto.cpp  test_repository.cpp
themes/: themes.go
