[package]
name = "colony_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
notify = "6"
indexmap = "2"
parking_lot = "0.12"
unic-langid = { version = "0.9", features = ["macros"] }
sys-locale = "0.3"

# GUI dependencies
gtk = { package = "gtk4", version = "0.10", features = ["v4_10"] }
sourceview5 = "0.10"

# Async & LSP
async-channel = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "sync", "fs"] }

# LSP
lsp-types = "0.95"

# Syntax highlighting and theming
syntect = { version = "5", features = ["parsing"] }

# Misc utilities
once_cell = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
